unpackaged/main/default/objects/pse__Resource_Transmission__c/pse__Resource_Transmission__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ResourceTransmissionHelp</customHelpPage>
    <description>Stores the transmission status and ID for each resource in a timecard transmission between a third-party application and PSA.</description>
    <label>Resource Transmission</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Resource Transmission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Transmissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>