unpackaged/main/default/objects/pse__Resource_Transmission__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Resource ID.</description>
    <inlineHelpText>The Resource ID.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Transmissions</relationshipLabel>
    <relationshipName>Resource_Transmissions</relationshipName>
    <type>Lookup</type>
</CustomField>