unpackaged/main/default/objects/pse__Resource_Transmission__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>Shows Complete if all requested timecard data has been returned. Otherwise, shows Pending.</description>
    <inlineHelpText>Shows Complete if all requested timecard data has been returned. Otherwise, shows Pending.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>