unpackaged/main/default/objects/pse__Resource_Transmission__c/fields/pse__Timecard_Transmission__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Transmission__c</fullName>
    <description>The Timecard Transmission ID.</description>
    <inlineHelpText>The Timecard Transmission ID.</inlineHelpText>
    <label>Timecard Transmission</label>
    <referenceTo>pse__Timecard_Transmission__c</referenceTo>
    <relationshipLabel>Resource Transmissions</relationshipLabel>
    <relationshipName>Resource_Timecard_Transmissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>